# nimbro_fsm2

./: .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Doxyfile-mcss  README.md  annotated.html  brigand_8h.html  classnimbro__fsm2_1_1FSM.html  classnimbro__fsm2_1_1FSM_1_1State.html  classnimbro__fsm2_1_1FSM_1_1StateBase.html  classnimbro__fsm2_1_1FSM_1_1Transition.html  classnimbro__fsm2_1_1FSM_1_1Transitions.html  files.html  howto.html  index.html  modules.html  namespacenimbro__fsm2.html  namespaces.html  namespacestd.html  package.xml  pages.html  rqt_plugins.xml  searchdata-v1.js  searchdata.js
action/: ChangeState.action
clang_plugin/: CMakeLists.txt  fsm_checker.cpp
cmake/: nimbro_fsm2.cmake.in
doc/: howto.dox  mainpage.dox  namespaces.dox
example/: CMakeLists.txt  crashed.cpp  crashed.h  demo.cpp  driving.cpp  driving.h  fsm.h  idle.cpp  idle.h
gui/: CMakeLists.txt  b_splines.cpp  b_splines.h  buttonview.cpp  buttonview.h  node_graph.cpp  node_graph.h  statemachine_gui.cpp  statemachine_gui.h  statemachine_gui.ui  timeline.cpp  timeline.h
include/brigand/: brigand.h
include/nimbro_fsm2/: fsm.h  introspection.h
include/nimbro_fsm2/detail/: action_interface.h  format.h  has_to_string.h  info_initializer.h  is_defined.h  pointer.h  ros_interface.h  type_name.h  variant_membership.h  watchdog.h
include/nimbro_fsm2/helpers/: action_client.h
include/nimbro_fsm2/helpers/impl/: action_client.hpp
include/type_name/: README.md  type_name.clang.5.hpp  type_name.gcc.7_3.hpp  type_name.gcc.8_1.hpp  type_name.gcc.hpp  type_name.hpp  type_name.msvc.19_21.hpp
msg/: Info.msg  StateInfo.msg  StateList.msg  Status.msg
src/: fsm.h  introspection.h  test.cpp  test.h
src/detail/: action_interface.cpp  format.cpp  ros_interface.cpp  type_name.h  watchdog.cpp
templates/: CMakeLists_template.txt  create_fsm  create_state  driver.cpp  driver.h  fsm.h  package_template.txt  state.cpp  state.h  state_script.py
test/: simple_fsm.cpp  simple_fsm.test
test/detail/: type_name.cpp  variant_membership.cpp
